# NTT-Sumcheck

./: README.md
assignment1/: README.md  provided.py  pyproject.toml  student.py
assignment1/scripts/: make_submission.sh  setup.sh
assignment1/tests/: benchmark.py  conftest.py  reference.py  test_ntt.py
assignment2/: .gitignore  README.md  custom_cases.md  provided.py  pyproject.toml  student.py  sumcheck_intro.md  sumcheck_slides.pptx  sumcheck_utils.py
assignment2/scripts/: custom_cases.py  debug_round_trace.py  make_submission.sh
assignment2/tests/: benchmark.py  case_selection.py  case_utils.py  conftest.py  data_loader.py  test_sumcheck.py
assignment2/tests/data/vars16/: v16_case32_0.npz  v16_case32_0_meta.json  v16_case32_1.npz  v16_case32_1_meta.json  v16_case32_2.npz  v16_case32_2_meta.json  v16_case32_3.npz  v16_case32_3_meta.json  v16_case32_4.npz  v16_case32_4_meta.json  v16_case64_0.npz  v16_case64_0_meta.json  v16_case64_1.npz  v16_case64_1_meta.json  v16_case64_2.npz  v16_case64_2_meta.json  v16_case64_3.npz  v16_case64_3_meta.json  v16_case64_4.npz  v16_case64_4_meta.json
assignment2/tests/data/vars20/: v20_case32_0_meta.json  v20_case32_1_meta.json  v20_case32_2_meta.json  v20_case32_3_meta.json  v20_case32_4_meta.json  v20_case64_0_meta.json  v20_case64_1_meta.json  v20_case64_2_meta.json  v20_case64_3_meta.json  v20_case64_4_meta.json
assignment2/tests/data/vars4/: v4_case32_0.npz  v4_case32_0_meta.json  v4_case32_0_round_tables.npz  v4_case32_1.npz  v4_case32_1_meta.json  v4_case32_1_round_tables.npz  v4_case32_2.npz  v4_case32_3.npz  (+22 more)
